--- a/Pictation/Base.lproj/Main.storyboard
+++ b/Pictation/Base.lproj/Main.storyboard
@@ -18,7 +18,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="S3U-ym-ifh">
-                                <rect key="frame" x="30" y="135" width="101" height="89"/>
+                                <rect key="frame" x="30" y="91" width="101" height="89"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="89" id="O3b-NN-qOx"/>
                                 </constraints>
@@ -31,14 +31,14 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W52-gk-50V">
-                                <rect key="frame" x="705" y="244" width="37" height="30"/>
+                                <rect key="frame" x="705" y="200" width="37" height="30"/>
                                 <state key="normal" title="Make"/>
                                 <connections>
                                     <action selector="makeButtonHandler:" destination="k9T-gN-1uI" eventType="touchUpInside" id="L3K-3q-1ls"/>
                                 </connections>
                             </button>
                             <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GH1-R8-VeX">
-                                <rect key="frame" x="295" y="76" width="179" height="30"/>
+                                <rect key="frame" x="295" y="32" width="179" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -175,7 +175,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="20" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FmA-4c-trw" customClass="ImageDisplay" customModule="Pictation" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="76" width="616" height="100"/>
+                                <rect key="frame" x="0.0" y="32" width="616" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="qvS-yH-gip"/>
                                 </constraints>
@@ -186,7 +186,7 @@
                                 </userDefinedRuntimeAttributes>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="GqA-Ty-Qvm">
-                                <rect key="frame" x="682" y="76" width="60" height="100"/>
+                                <rect key="frame" x="682" y="32" width="60" height="100"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4pj-9k-MQt">
                                         <rect key="frame" x="0.0" y="0.0" width="60" height="30"/>
@@ -217,7 +217,7 @@
                                 </constraints>
                             </stackView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WIl-B9-Gwj">
-                                <rect key="frame" x="0.0" y="605" width="768" height="419"/>
+                                <rect key="frame" x="0.0" y="561" width="768" height="463"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="0ou-NX-zRl">
                                     <size key="itemSize" width="118" height="102"/>
@@ -265,7 +265,7 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7dC-py-Eu8">
-                                <rect key="frame" x="20" y="184" width="140" height="30"/>
+                                <rect key="frame" x="20" y="140" width="140" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MGU-vT-Kyh">
                                         <rect key="frame" x="0.0" y="0.0" width="42" height="30"/>
@@ -477,15 +477,50 @@
                         <outlet property="logoutButton" destination="pdr-xx-sAw" id="2ug-bi-RHC"/>
                         <segue destination="k9T-gN-1uI" kind="show" identifier="beginnerFromSettings" id="rv6-lD-qnG"/>
                         <segue destination="ZfP-XQ-GJu" kind="show" identifier="intermediateFromSettings" id="2U3-2p-Ijy"/>
+                        <segue destination="O6S-79-Fh2" kind="show" identifier="toUserFromSettings" id="xxE-eh-9xa"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="74e-g6-IoK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1462" y="-514"/>
+            <point key="canvasLocation" x="1480" y="-517"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="7rW-I5-Eus">
+            <objects>
+                <viewController id="O6S-79-Fh2" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3P4-fo-o4a">
+                        <rect key="frame" x="0.0" y="0.0" width="768" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jei-LM-tpz">
+                                <rect key="frame" x="20" y="43" width="728" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="alu-VB-LN0"/>
+                                </constraints>
+                                <state key="normal" title="Guest"/>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Qbn-jf-Qlk">
+                                <rect key="frame" x="20" y="98" width="728" height="906"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Jei-LM-tpz" firstAttribute="leading" secondItem="IZj-0r-ZJJ" secondAttribute="leading" constant="20" id="J7e-ji-Hmh"/>
+                            <constraint firstItem="Qbn-jf-Qlk" firstAttribute="top" secondItem="Jei-LM-tpz" secondAttribute="bottom" constant="11" id="aDZ-wT-Nfx"/>
+                            <constraint firstItem="IZj-0r-ZJJ" firstAttribute="trailing" secondItem="Jei-LM-tpz" secondAttribute="trailing" constant="20" id="uQd-6p-v8D"/>
+                            <constraint firstItem="Jei-LM-tpz" firstAttribute="top" secondItem="IZj-0r-ZJJ" secondAttribute="top" constant="23" id="umo-1Z-cPh"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="IZj-0r-ZJJ"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fQo-Yn-Gsu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2482.8125" y="-517.3828125"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="LBc-jJ-fQO"/>
-        <segue reference="MpU-hq-Oov"/>
+        <segue reference="rv6-lD-qnG"/>
     </inferredMetricsTieBreakers>
 </document>
