--- a/Pictation/Base.lproj/Main.storyboard
+++ b/Pictation/Base.lproj/Main.storyboard
@@ -291,7 +291,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="20" baselineRelativeArrangement="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FmA-4c-trw" customClass="ImageDisplay" customModule="Pictation" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="76" width="616" height="100"/>
+                                <rect key="frame" x="0.0" y="32" width="616" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="100" id="qvS-yH-gip"/>
                                 </constraints>
@@ -302,7 +302,7 @@
                                 </userDefinedRuntimeAttributes>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" translatesAutoresizingMaskIntoConstraints="NO" id="GqA-Ty-Qvm">
-                                <rect key="frame" x="682" y="76" width="60" height="100"/>
+                                <rect key="frame" x="682" y="32" width="60" height="100"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4pj-9k-MQt">
                                         <rect key="frame" x="0.0" y="0.0" width="60" height="30"/>
@@ -333,13 +333,13 @@
                                 </constraints>
                             </stackView>
                             <textField opaque="NO" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XAh-eu-VYf">
-                                <rect key="frame" x="190" y="186" width="388" height="26"/>
+                                <rect key="frame" x="190" y="142" width="388" height="26"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="7dC-py-Eu8">
-                                <rect key="frame" x="20" y="184" width="140" height="30"/>
+                                <rect key="frame" x="20" y="140" width="140" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MGU-vT-Kyh">
                                         <rect key="frame" x="0.0" y="0.0" width="42" height="30"/>
@@ -368,7 +368,7 @@
                                 </constraints>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Fk-Ca-HzI">
-                                <rect key="frame" x="243" y="404" width="89" height="30"/>
+                                <rect key="frame" x="243" y="360" width="89" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="89" id="s3r-lE-x23"/>
                                     <constraint firstAttribute="height" constant="30" id="t0y-5j-aqV"/>
@@ -378,7 +378,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qz2-pM-nSw">
-                                <rect key="frame" x="332" y="404" width="89" height="30"/>
+                                <rect key="frame" x="332" y="360" width="89" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="BkM-5p-E3k"/>
                                     <constraint firstAttribute="width" constant="89" id="EjJ-Jq-cHc"/>
@@ -388,7 +388,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eWG-5p-VGh">
-                                <rect key="frame" x="421" y="404" width="89" height="30"/>
+                                <rect key="frame" x="421" y="360" width="89" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="89" id="6ll-ZV-C7t"/>
                                     <constraint firstAttribute="height" constant="30" id="aC4-ml-g8Z"/>
@@ -398,7 +398,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="WIl-B9-Gwj">
-                                <rect key="frame" x="0.0" y="468" width="768" height="556"/>
+                                <rect key="frame" x="0.0" y="424" width="768" height="600"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="5" minimumInteritemSpacing="5" id="0ou-NX-zRl">
                                     <size key="itemSize" width="100" height="100"/>
@@ -668,7 +668,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jei-LM-tpz">
-                                <rect key="frame" x="20" y="87" width="728" height="44"/>
+                                <rect key="frame" x="20" y="43" width="728" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="44" id="alu-VB-LN0"/>
                                 </constraints>
@@ -765,7 +765,7 @@
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="LBc-jJ-fQO"/>
+        <segue reference="Keq-Pd-tLt"/>
         <segue reference="2U3-2p-Ijy"/>
         <segue reference="MpU-hq-Oov"/>
     </inferredMetricsTieBreakers>
